--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<link href="css/Persona5Style.css" rel="stylesheet" type="text/css" />
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<link href="css/Persona5Style.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" />
+		<script type="text/javascript" src="js/jquery-3.5.1.min.js" ></script>
+		<script type="text/javascript" src="js/jquery.mousewheel.min.js" ></script>
+		<script type="text/javascript" src="js/jquery.mCustomScrollbar.js" ></script>
+		<script type="text/javascript" src="js/vue.min.js" ></script>
+		<title>Persona5 style example</title>
 	</head>
 	<body>
 		<p>This is a Persona5 Style test project.</p>
@@ -12,6 +17,25 @@
 			<div class="menuText">Test menu button...</div>
 			<div class="menuInner"></div>
 			<div class="menuOuter"></div>
+		</div>
+		<div style="width: 200px; height: 150px; background-color: gray; margin-top: 20px;"
+			class="mCustomScrollbar" data-mcs-theme="P5">
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
+			asdfasdfasdfasf<br />
 		</div>
 	</body>
 </html>
